test/ui/src/compile_fail/std/emit_props_non_static.stderr
error[E0597]: `short_lived` does not live long enough
 --> src/compile_fail/std/emit_props_non_static.rs:5:25
  |
4 |     let short_lived = String::from("x");
  |         ----------- binding `short_lived` declared here
5 |     let x = InternalRef(&short_lived);
  |                         ^^^^^^^^^^^^ borrowed value does not live long enough
6 |
7 |     emit::emit!("template {x}");
  |                            - argument requires that `short_lived` is borrowed for `'static`
8 | }
  | - `short_lived` dropped here while still borrowed
  |
note: requirement that the value outlives `'static` introduced here
 --> $WORKSPACE/src/macro_hooks.rs
  |
  |         Self: CaptureWithDefault,
  |               ^^^^^^^^^^^^^^^^^^
